--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   image_picker: ^0.8.5+3
   image: ^3.0.1
   color_converter: ^0.2.1
+  color: ^3.0.0
+  flutter_color: ^2.1.0
 
 dev_dependencies:
   flutter_test:
