--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: sample_flutter_app
-description: "A new Flutter project."
+name: ColorCompass
+description: ''
 
 # Prevent accidental publishing to pub.dev.
 publish_to: 'none'
