--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "sample_flutter_app",
-    "short_name": "sample_flutter_app",
+    "name": "ColorCompass",
+    "short_name": "ColorCompass",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
